remove unwanted files

--- a/Mi-NB-Air-125-7y30/EFI/CLOVER/config.plist
+++ b/Mi-NB-Air-125-7y30/EFI/CLOVER/config.plist
@@ -321,7 +321,7 @@
 		<key>#XMPDetection</key>
 		<string>-1</string>
 		<key>Arguments</key>
-		<string>nv_disable=1 -disablegfxfirmware</string>
+		<string>slide=0 -xcpm darkwake=8 nv_disable=1 -disablegfxfirmware</string>
 		<key>Debug</key>
 		<false/>
 		<key>DefaultVolume</key>
