--- a/Mi-NB-Air-125-7y-Series/EFIOC/OC/Kexts/VoodooPS2Controller.kext/Contents/Plugins/VoodooPS2Keyboard.kext.dSYM/Contents/Info.plist
+++ b/Mi-NB-Air-125-7y-Series/EFIOC/OC/Kexts/VoodooPS2Controller.kext/Contents/Plugins/VoodooPS2Keyboard.kext.dSYM/Contents/Info.plist
@@ -5,7 +5,7 @@
 		<key>CFBundleDevelopmentRegion</key>
 		<string>English</string>
 		<key>CFBundleIdentifier</key>
-		<string>com.apple.xcode.dsym.org.coolstar.VoodooGPIO</string>
+		<string>com.apple.xcode.dsym.as.acidanthera.voodoo.driver.PS2Keyboard</string>
 		<key>CFBundleInfoDictionaryVersion</key>
 		<string>6.0</string>
 		<key>CFBundlePackageType</key>
@@ -13,8 +13,8 @@
 		<key>CFBundleSignature</key>
 		<string>????</string>
 		<key>CFBundleShortVersionString</key>
-		<string>1.1</string>
+		<string>2.1.0</string>
 		<key>CFBundleVersion</key>
-		<string>1.1</string>
+		<string>2.1.0</string>
 	</dict>
 </plist>
